# Listonian-bot

./: # Implementation Summary.txt  .clinerules-code  .coverage  .env.example  .gitattributes  .gitignore  .prettierrc  .real_data_only  0x257a30645bF0C91BC155bd9C01BD72232.txt  BRAVE_API_KEY=BSAkpm-HiZl5GMwrC3zHehKPMw.txt  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEX_Discovery_Implementation_Plan.md  DEx info.lnk  Dashboard ideal 2-22-2025-1821.txt  Dex_listing.txt  FLASHBOTS_INTEGRATION_GUIDE.md  FLASH_LOAN_GUIDE.md  GITHUB_MCP_GUIDE.md  GITHUB_MCP_INTEGRATION.md  LICENSE  MANIFEST.in  MEMORY_BANK_UPDATES.md  PRODUCTION_CLEANUP.md  PROJECT_ARCHITECTURE_ASCII.txt  QUICK_START.md  README.md  README_NEW.md  README_PRODUCTION.md  README_UPDATED.md  STATUS_UPDATE.md  SwapBased V3.txt  __init__.py  alchemy_integration_plan.md  alchemy_price_dashboard.py  bot.err  bot_api_server.py  bot_data_bridge.py  check_components.py  check_pytest.py  (+204 more)
.augment/: config.json  mcp_config.json  mcp_helper.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.roo/: mcp.json  mcp.json.save
Listonian-bot/: pyproject.toml
MermaidCharts/: README.md  arbitrage_sequence.md  architecture_explanation.md  bot_architecture.md  enhanced_arbitrage_sequence.md  execution_flow.md
abi/: IPancakeV3Pool.json  IUniswapV2Router.json  IUniswapV3Factory.json  IUniswapV3QuoterV2.json  Multicall.json  aerodrome_factory.json  aerodrome_pool.json  aerodrome_router.json  aerodrome_v2_pool.json  aerodrome_v2_router.json  aerodrome_v3_factory.json  aerodrome_v3_pool.json  aerodrome_v3_quoter.json  balancer_vault.json  baseswap_factory.json  baseswap_pair.json  baseswap_router.json  baseswap_router_v3.json  baseswap_v3_factory.json  baseswap_v3_pool.json  baseswap_v3_quoter.json  dex_factory.json  dex_pair.json  dex_router.json  pancake_v3_pool.json  pancakeswap_factory.json  pancakeswap_v3_factory.json  pancakeswap_v3_pool.json  pancakeswap_v3_pool_deployer.json  pancakeswap_v3_quoter.json  pancakeswap_v3_router.json  rocketswap_factory.json  rocketswap_router.json  rocketswap_v3_factory.json  rocketswap_v3_pool.json  rocketswap_v3_quoter.json  rocketswap_v3_router.json  sushiswap_factory.json  sushiswap_router.json  swapbased_factory.json  (+7 more)
analytics/: gas_202501.json  performance_report_202501.json
arbitrage_bot/: __init__.py  integration.py  production.py
archive/: ARCHIVE_STATUS.md  README.md
backup/: run_base_dex_scanner_mcp_with_api.py  swapbased.py
cline_docs/: SECURITY_BREACH.md  activeContext.md  arbitrage_configuration_guide.md  arbitrage_integration_guide.md  architectural_assessment.md  base_dex_scanner_mcp_implementation_tasks.md  base_dex_scanner_mcp_integration.md  base_dex_scanner_mcp_plan.md  base_dex_scanner_mcp_plan_enhanced.md  base_dex_scanner_mcp_plan_updated.md  cleanup_plan.md  dashboard_access_guide.md  dashboard_integration.md  documentationIndex.md  flash_loan_flashbots_guide.md  git_verification.md  handoff_notes.md  implementation_comparison.md  implementation_summary.md  listonian_bot_fix_plan.md  monitoring_dashboard.md  next_steps.md  next_steps_plan.md  productContext.md  production_setup_guide.md  progress.md  projectbrief.md  secure_configuration.md  secure_credentials.md  startup_guide.md  startup_guide_complete.md  supported_dexes.md  systemPatterns.md  techContext.md  transaction_signing_report.md  wallet_balancing.md
config/: config.json  pyproject.toml  test.yaml
configs/: CONFIG.md  README.md  base.json  config.json  default.json  default_config.json  dex_config.json  example_production_config.json  local.json  memory_config.json  mev_protection_config.json  monitor_config.json  production.json  production_config.json  test_config.json  trading_config.json  wallet_config.json  wallet_config.json.bak  wallet_config.json.example
contracts/: FlashLoanArbitrage.sol  README.md  TEST_INSTRUCTIONS.md  deploy-flash.ps1  deployment-details.json  deployment-result.json  flash-loan-deployment-details.json  hardhat.config.js  multi-path-deployment-details.json  package.json  setup.sh  wallet-verification-results.json
dashboard/: __init__.py  arbitrage_monitor.py  main.py  websocket_handler.py
dashboard--option/: main.py  requirements.txt
data/: arbitrage.db  test.db  trades.db
docs/: ARBITRAGE_EXECUTION_IMPROVEMENTS.md  ARBITRAGE_MONITOR_REFACTORING.md  ARBITRAGE_SYSTEM_MIGRATION.md  ARBITRAGE_SYSTEM_README.md  CI_CD_SETUP.md  COMPONENT_INTEGRATION.md  CONFIGURATION_SETUP.md  CORE_FLOW.md  DASHBOARD_ENHANCEMENTS.md  DATA_COLLECTION_CONFIG.md  DATA_COLLECTION_IMPLEMENTATION.md  DATA_COLLECTION_SUMMARY.md  DEX_INTERFACE_IMPROVEMENTS.md  DUAL_LSTM_SYSTEM.md  FLASHBOTS_INTEGRATION.md  GAS_OPTIMIZATION_PROPOSAL.md  GETTING_STARTED.md  INTEGRATION_GUIDE.md  LOG_PARSER_BRIDGE.md  LOG_PARSER_BRIDGE_USAGE.md  LSTM_EXPLANATION.md  MCP_INTEGRATION.md  ML_DATABASE_SCHEMA.md  ML_DATA_COLLECTION.md  ML_SYSTEM_DETAILED_PLAN.md  ML_SYSTEM_ENHANCEMENTS.md  MODULAR_DATA_COLLECTION.md  NOTE_FOR_NEXT_ASSISTANT.md  PRODUCTION_DEPLOYMENT.md  PROFIT_ANALYSIS_GUIDE.md  PROJECT_ARCHITECTURE.md  PROJECT_INTEGRATION.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RESTRUCTURING.md  RESTRUCTURING_STEPS.md  SYSTEM_IMPROVEMENTS_SUMMARY.md  SYSTEM_OVERVIEW.md  TOKEN_VERIFICATION_SYSTEM.md  (+26 more)
examples/: advanced_analytics_example.py  base_dex_scanner_integration_example.py  dex_discovery_example.py  dex_discovery_example_mock.py  flash_loan_example.py  flashbots_example.py  flashbots_flash_loan_example.py  github_tracker_example.py  glama_enhanced_strategy.py  mev_protection_example.py  multi_hop_arbitrage.py  multi_path_arbitrage.py  multi_path_arbitrage_example.py  performance_optimization_example.py  real_time_metrics_example.py  run_dex_discovery_example.py  run_mev_protection_example.py  run_multi_path_arbitrage_example.py  run_performance_optimization_example.py  run_real_time_metrics_example.py
mcp_servers/: __init__.py
memory-bank/: DASHBOARD_ANALYSIS.md  DASHBOARD_GUIDE.md  DASHBOARD_PLAN.md  MEMORY_BANK_UPDATES.md  STARTUP_GUIDE.md  ```mermaid.md  (+19 more)
(+1602 files in other folders)
