[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage_bot"
version = "0.1.0"
authors = [
    { name = "Listonian", email = "listonian@example.com" },
]
description = "Arbitrage bot for DEX trading"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "web3>=7.0.0",
    "aiohttp>=3.9.0",
    "eth-account>=0.8.0",
    "eth-typing>=3.0.0",
    "eth-utils>=2.1.0",
    "eth-abi>=4.0.0",
    "cryptography>=41.0.0",
    "flask-socketio>=5.3.0",
    "flask-cors>=4.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/arbitrage_bot"
"Bug Tracker" = "https://github.com/yourusername/arbitrage_bot/issues"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -v --cov=arbitrage_bot"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests",
    "flashbots: marks tests requiring Flashbots"
]

[tool.coverage.run]
source = ["arbitrage_bot"]
omit = [
    "tests/*",
    "setup.py",
]
