[metadata]
name = arbitrage_bot
version = 0.1.0
description = Arbitrage bot with Flashbots integration
long_description = file: README.md
long_description_content_type = text/markdown
author = Listonian
author_email = info@listonian.com
url = https://github.com/listonian/arbitrage-bot
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP
    Topic :: Security :: Cryptography
    Topic :: System :: Distributed Computing

[options]
packages = find:
python_requires = >=3.12
install_requires =
    web3>=6.0.0
    aiohttp>=3.8.0
    eth-account>=0.8.0
    eth-typing>=3.0.0
    eth-utils>=2.1.0
    eth-abi>=4.0.0
    eth-hash[pycryptodome]>=0.5.0
    eth-keyfile>=0.6.0
    eth-keys>=0.4.0
    eth-rlp>=0.3.0
    hexbytes>=0.3.0
    rlp>=3.0.0
    cytoolz>=0.12.0
    eth-bloom>=2.0.0
    pysha3>=1.0.2
    typing-extensions>=4.5.0
    python-dotenv>=1.0.0
    requests>=2.31.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    black>=23.0.0
    isort>=5.12.0
    mypy>=1.5.0
    flake8>=6.1.0

[options.package_data]
arbitrage_bot =
    py.typed
    abi/*.json
    configs/*.json

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[mypy]
python_version = 3.12
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True

[isort]
profile = black
multi_line_output = 3
