[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage_bot"
version = "0.1.0"
description = "Arbitrage bot for DEX trading"
readme = "README.md"
requires-python = ">=3.10"
# Add dependencies if known, otherwise leave empty or add later
# dependencies = [
#     "web3>=6.0.0",
#     "fastapi>=0.100.0",
#     # ... other dependencies
# ]

[tool.setuptools.packages.find]
where = ["."]  # ["."] tells setuptools to look in the current directory
include = ["arbitrage_bot*"]  # Include the arbitrage_bot package and its subpackages
exclude = ["tests*", "examples*"]  # Optionally exclude tests and examples

[tool.setuptools.package-data]
# Include non-code files if necessary, e.g., ABI files
# "arbitrage_bot.abi" = ["*.json"]